[gd_scene load_steps=22 format=2]

[ext_resource path="res://Themes/FightButtons/Disabled.tres" type="StyleBox" id=1]
[ext_resource path="res://Themes/FightButtons/Normal.tres" type="StyleBox" id=2]
[ext_resource path="res://Themes/FightButtons/Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/FightButtons/Hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Upgrade/ChooseUpgrade.gd" type="Script" id=5]
[ext_resource path="res://Textures/Icons/Armor.png" type="Texture" id=6]
[ext_resource path="res://Textures/Icons/Atk_Fis.png" type="Texture" id=7]
[ext_resource path="res://Textures/Icons/Atk_Mag.png" type="Texture" id=8]
[ext_resource path="res://Textures/Icons/Shield.png" type="Texture" id=9]
[ext_resource path="res://Textures/Icons/SnakeLenIcon.png" type="Texture" id=10]
[ext_resource path="res://Textures/Icons/Level.png" type="Texture" id=11]
[ext_resource path="res://Textures/Icons/Health.png" type="Texture" id=12]
[ext_resource path="res://Textures/Icons/Coin.png" type="Texture" id=13]

[sub_resource type="InputEventAction" id=1]
action = "1"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "2"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "3"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "4"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="ChooseUpgrade" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -208.0
margin_right = 208.0
margin_bottom = 208.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
margin_left = 16.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 400.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Grid" type="GridContainer" parent="ColorRect/ColorRect2"]
margin_right = 384.0
margin_bottom = 384.0

[node name="Label2" type="Label" parent="ColorRect/ColorRect2/Grid"]
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "
LEVEL (X)"
align = 1
valign = 1

[node name="Label" type="Label" parent="ColorRect/ColorRect2/Grid"]
margin_top = 63.0
margin_right = 384.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Level up!

You got Health points! (HEALTH +2)

You got bigger! (SNAKE LENGTH +1)

Choose an upgrade!"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="ColorRect/ColorRect2/Grid"]
margin_top = 212.0
margin_right = 384.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="a1" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
margin_right = 93.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 2 )
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="a2" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 4 )
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="a3" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
margin_left = 194.0
margin_right = 287.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 6 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="a4" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
margin_left = 291.0
margin_right = 384.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 8 )
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="SnakePart" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
visible = false
margin_top = 88.0
margin_right = 93.0
margin_bottom = 172.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 8 )
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="Exp" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
visible = false
margin_left = 97.0
margin_top = 88.0
margin_right = 190.0
margin_bottom = 172.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 8 )
icon = ExtResource( 11 )
icon_align = 1
expand_icon = true

[node name="Health" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
visible = false
margin_left = 194.0
margin_top = 88.0
margin_right = 287.0
margin_bottom = 172.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 8 )
icon = ExtResource( 12 )
icon_align = 1
expand_icon = true

[node name="Coin" type="Button" parent="ColorRect/ColorRect2/Grid/GridContainer"]
visible = false
margin_left = 291.0
margin_top = 88.0
margin_right = 384.0
margin_bottom = 172.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
shortcut = SubResource( 8 )
icon = ExtResource( 13 )
icon_align = 1
expand_icon = true

[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/a1" to="." method="_on_a1_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/a2" to="." method="_on_a2_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/a3" to="." method="_on_a3_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/a4" to="." method="_on_a4_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/SnakePart" to="." method="_on_SnakePart_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/Exp" to="." method="_on_Exp_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/Health" to="." method="_on_Health_button_up"]
[connection signal="button_up" from="ColorRect/ColorRect2/Grid/GridContainer/Coin" to="." method="_on_Coin_button_up"]
